# Dantonio

./: Dockerfile  README.md  __init__.py  docker-compose.yml  pyproject.toml  requirements.txt
Documents/: Appraisers2024-04-12.csv  Insurance_Adjusters2024-04-12.csv  Insurance_Companies_2024-04-12.csv  Invoices Summary Report - 2021-07-01 to 2022-01-01.csv  LEASE-1.odt  LEASE.docx  Untitled 1.odt  Untitled 2.odt  Untitled 3.odt  Untitled 4.odt  Untitled 5.ods  completed w-9.odg  mev_bot2 deployment instructions.odt  receivables_2024-04-12 (1).csv  receivables_2024-04-12.csv
abis/: aave_lending_pool.json  compound_ctoken.json  erc20.json  sushiswap_router.json  uniswap_v2_router.json  uniswap_v3_router.json
api/: endpoints.py
config/: base.yaml  conifg.yaml  development.yaml  logging_config.yaml  network_config.yaml  production.yaml
constants/: config.py  errors.py  messages.py  settings.py
core/: _init_.py  alert_system.py  bundle_builder.py  config.py  error_handler.py  event_listener.py  gas_optimizer.py  health_checker.py  logging.py  logging_system.py  monitoring.py  notification_system.py  risk_manager.py  security.py  security_manager.py  strategy_executor.py  websocket_manager.py
frontend/: interface.py
monitoring/: dashboard.py
scripts/: deploy.sh  etup_env.sh  run_tests.sh  setup_grafana.sh  setup_prometheus.sh
services/: __init__.py  base_service.py  blockchain_service.py  frontend_service.py  notification_service.py  order_service.py  performance_monitor_service.py  risk_manager_service.py  strategy_executor_service.py  trading_service.py
(+70 files in other folders)
